ipc/ipdl/test/ipdl/error/twoprotocols.ipdl
// it's an error to define two protocols in the same file

protocol p1 {
child: Msg();
};

protocol p2 {
child: Msg();
};
